--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
+html {
+    height: 100%;
+}
+
 body {
-    background-color: #FC5E55;
+    background-image: linear-gradient(#FC5E55, #FA4083);
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
 }
 .container {
     width: 1024px;
