--- a/style.css
+++ b/style.css
@@ -34,27 +34,32 @@ main {
 }
 
 .cards {
-    background-color: rgb(217, 217, 251);
-    min-height: 300px;
     display: flex;
     justify-content: space-between;
+    text-align: center;
 }
 
 .card1 {
-    background-color: lightblue;
-    min-height: 300px;
+    background-image: url(images/image-background-card1.jpg);
+    background-size: cover;
+    background-position: bottom;
+    min-height: 250px;
     width: 30%;
 }
 
 .card2 {
-    background-color: lightpink;
-    min-height: 300px;
+    background-image: url(images/image-background-card2.jpg);
+    background-size: cover;
+    background-position: bottom;
+    min-height: 250px;
     width: 30%;
 }
 
 .card3 {
-    background-color: lightseagreen;
-    min-height: 300px;
+    background-image: url(images/image-background-card3.jpg);
+    background-size: cover;
+    background-position: bottom;
+    min-height: 250px;
     width: 30%;
 }
 
@@ -68,10 +73,25 @@ main {
 
 h1 {
     font-size: 3.25rem;
+    font-family: "Playfair Display", serif;
     margin-bottom: 0.1rem;
 }
 
+h2 {
+    font-size: 2rem;
+    font-family: "Playfair Display", serif;
+    margin-top: 20px;
+}
+
 p {
+    font-size: 1rem;
     line-height: 1.75rem;
+    font-family: "Source Sans 3", sans-serif;
     margin-bottom: 0.5rem;
+}
+
+.cards p {
+    font-size: .85rem;
+    line-height: 1.2rem;
+    margin: 10px 30px 20px 30px;
 }
