--- a/style.css
+++ b/style.css
@@ -95,3 +95,8 @@ p {
     line-height: 1.2rem;
     margin: 10px 30px 20px 30px;
 }
+
+.cards a  {
+    color: white;
+    text-decoration: none;
+}
