--- a/style.css
+++ b/style.css
@@ -8,6 +8,12 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.125rem;
 }
+
+a {
+    color: white;
+    text-decoration: none;
+}
+
 .container {
     width: 1024px;
     min-height: 300px;
@@ -45,6 +51,7 @@ main {
     background-position: bottom;
     min-height: 250px;
     width: 30%;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.248);
 }
 
 .card2 {
@@ -53,6 +60,7 @@ main {
     background-position: bottom;
     min-height: 250px;
     width: 30%;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.248);
 }
 
 .card3 {
@@ -61,6 +69,12 @@ main {
     background-position: bottom;
     min-height: 250px;
     width: 30%;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.248);
+}
+
+.card1, .card2, .card3 {
+    padding: 30px 30px 20px 30px;
+    box-sizing: border-box;
 }
 
 .herobox1 {
@@ -75,6 +89,7 @@ h1 {
     font-size: 3.25rem;
     font-family: "Playfair Display", serif;
     margin-bottom: 0.1rem;
+    text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.248);
 }
 
 h2 {
@@ -93,10 +108,19 @@ p {
 .cards p {
     font-size: .85rem;
     line-height: 1.2rem;
-    margin: 10px 30px 20px 30px;
+    margin: 10px;
 }
 
-.cards a  {
-    color: white;
-    text-decoration: none;
+.mybutton {
+    background-color: white;
+    color: #FA4083;
+    font-family: "Playfair Display", serif;
+    padding: 11px 25px;
+    border-radius: 12px;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.248);
+}
+
+a.mybutton {
+    display: inline-block;
+    margin-top: 20px;
 }
