--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-    height: 100%;
+
 }
 
 body {
@@ -30,6 +30,7 @@ header {
     align-items: center;
     padding-top: 40px;
     padding-bottom: 40px;
+    border-bottom: 1px solid lightgrey;
 }
 
 main {
@@ -116,11 +117,80 @@ p {
     color: #FA4083;
     font-family: "Playfair Display", serif;
     padding: 11px 25px;
-    border-radius: 12px;
+    border-radius: 5px;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.248);
+}
+
+.mybutton:hover {
+    background-color: aquamarine;
+    transition-duration: 1s;
 }
 
 a.mybutton {
     display: inline-block;
     margin-top: 20px;
+}
+
+nav a.mybutton {
+    margin-left: 30px;
+}
+
+.navbutton {
+    color: white;
+    /* background-color: #fa408400; */
+    box-shadow: 0px 0px 0px;
+    border: 1px solid white;
+    margin-left: 0px;
+    border-radius: 2px;
+    font-family: "Playfair Display", serif;
+    padding: 11px 25px;
+    display: inline-block;
+    position: relative;
+
+}
+
+.testimonials {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 100px;
+}
+
+.tbox {
+    width: 47%;
+    padding: 50px;
+    border: 1px solid white;
+    box-sizing: border-box;
+    margin-top: 50px;
+}
+
+.tbox p:last-child {
+    font-size: .8rem;
+    padding-left: 30px;
+}
+
+.dropdown {
+    display: none;
+    position: absolute;
+    padding-top: 20px;
+    z-index: 1;
+    text-align: center;
+}
+
+.navbutton:hover .dropdown {
+    display: block;
+}
+
+.dropdown .navbutton {
+    width: 120px;
+    background-color: white;
+    border-radius: 0px;
+}
+
+.dropdown .navbutton a {
+    color: #FA4083;
+}
+
+.dropdown .navbutton:hover {
+    background-color: lightgray;
 }
